--- a/home.html
+++ b/home.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <!-- Bootstrap Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Homepage</title>
 </head>
 <body>
+
+    <!-- TODO: Add aesthetic styling -->
+    <!-- TODO: Replace divs with semantic HTML -->
+    <!-- TODO: Insure proper IDs are being used -->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-center text-lg-start">Welcome to holiDATE</h1>
+                <p class="text-center text-lg-start">MMMM D, YYYY</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid d-flex flex-column flex-lg-row">
+    <div class="d-flex align-items-center flex-column">
+        <button class="btn btn-primary">+New Project</button>
+        <div id="holidayCard" class="card">Lorem Ipsum</div>
+    </div>
+    <ul id="filesList" class="list-group scrollable-list d-flex flex-column flex-grow-1">
+        <li class="list-group-item">
+            <h3>Placeholder Name</h3>
+            <p><i>Last Updated: mm/dd/yy</i></p>
+        </li>
+        <li class="list-group-item">
+            <h3>Placeholder Name</h3>
+            <p><i>Last Updated: mm/dd/yy</i></p>
+        </li>
+        <li class="list-group-item">
+            <h3>Placeholder Name</h3>
+            <p><i>Last Updated: mm/dd/yy</i></p>
+        </li>
+        <li class="list-group-item">
+            <h3>Placeholder Name</h3>
+            <p><i>Last Updated: mm/dd/yy</i></p>
+        </li>
+    </ul>
+    </div>
+    <footer class="container-fluid">
+
+    </footer>
+
     <!-- Bootstrap Script -->
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
