--- a/home.html
+++ b/home.html
@@ -11,10 +11,17 @@
 </head>
 
 <body>
-    <table>
-        <tbody id="holidayCard">
-        </tbody>
-    </table>
+    <section>
+        <button class="slide-arrow" id="slide-arrow-prev">
+            &#8249;
+        </button>
+
+        <button class="slide-arrow" id="slide-arrow-next">
+            &#8250;
+        </button>
+        <div.carousel id="holidayCard" class = 'holidayCard'>
+        </div.carousel>
+    </section>
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
