--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
     <title>Project</title>
 </head>
 <body>
+    <p></p>
     <!-- Bootstrap Script -->
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -24,6 +25,6 @@
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
     crossorigin="anonymous"></script>
     <!-- Custom Script -->
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script2.js"></script>
 </body>
 </html>
