trying to figure out setting start and end dates

--- a/project.html
+++ b/project.html
@@ -24,6 +24,16 @@
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
     crossorigin="anonymous"></script>
     <!-- Custom Script -->
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script2.js"></script>
 </body>
+
+<label for="start">Start date:</label>
+
+<input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31" />
+
+<label for="end">End date:</label>
+
+<input type="date" id="end" class="date"  value="2024-01-01" min="2024-01-01" max="2030-12-31" />
+<label for="date">Pick a date</label>
+<input type="date" name="date" id="date">
 </html>
