--- a/home.html
+++ b/home.html
@@ -22,12 +22,16 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex flex-column flex-lg-row">
-    <div class="d-flex align-items-center flex-column">
-        <button class="btn btn-primary">+New Project</button>
-        <div id="holidayCard" class="card">Lorem Ipsum</div>
-    </div>
-    <ul id="filesList" class="list-group scrollable-list d-flex flex-column flex-grow-1">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="p-2 d-flex align-items-center flex-column">
+                    <button class="mb-2 btn btn-primary">+New Project</button>
+                    <div id="holidayCard" class="card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                </div>
+            </div>
+        <div class="col-lg-9">
+    <ul id="filesList" class="p-2 list-group scrollable-list d-flex flex-column">
         <li class="list-group-item">
             <h3>Placeholder Name</h3>
             <p><i>Last Updated: mm/dd/yy</i></p>
@@ -45,7 +49,10 @@
             <p><i>Last Updated: mm/dd/yy</i></p>
         </li>
     </ul>
+</div>
     </div>
+    </div>
+</div>
     <footer class="container-fluid">
 
     </footer>
