small changes to all

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-12">
                 <h1 class="text-center text-lg-start">Welcome to holiDATE</h1>
-                <p class="text-center text-lg-start">MMMM D, YYYY</p>
+                <p class="text-center text-lg-start" id="current-date">MMMM D, YYYY</p>
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="p-2 d-flex align-items-center flex-column">
-                    <button class="mb-2 btn btn-primary">+New Project</button>
+                    <button class="mb-2 btn btn-primary" id="new-project">+New Project</button>
                     <table>
                         <tbody id="holidayCard">
                         </tbody>
