--- a/project.html
+++ b/project.html
@@ -8,32 +8,35 @@
     <title>Project</title>
 </head>
 <body>
-    <!-- Bootstrap Script -->
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-    ></script>
-    <!-- DayJS Script -->
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script>dayjs().format()</script>
-    </script>
-    <!-- jQuery Script -->
-    <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"></script>
-    <!-- Custom Script -->
-    <script src="./assets/js/script2.js"></script>
-</body>
-
+   
 <label for="start">Start date:</label>
 
-<input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31" />
+<input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
 
 <label for="end">End date:</label>
 
-<input type="date" id="end" class="date"  value="2024-01-01" min="2024-01-01" max="2030-12-31" />
-<label for="date">Pick a date</label>
-<input type="date" name="date" id="date">
+<input type="date" id="end" class="date"  value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
+
+<button id="myBtn">Submit</button>
+
+<p id="demo"></p>
+ <!-- Bootstrap Script -->
+ <script
+ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+ crossorigin="anonymous"
+ ></script>
+ <!-- DayJS Script -->
+ <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+ <script>dayjs().format()</script>
+ </script>
+ <!-- jQuery Script -->
+ <script
+ src="https://code.jquery.com/jquery-3.7.1.min.js"
+ integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+ crossorigin="anonymous"></script>
+<!-- Custom Script -->
+<script src="./assets/js/script2.js"></script>
+</body>
+
 </html>
