--- a/project.html
+++ b/project.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
     <!-- Bootstrap Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Project</title>
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center text-lg-start">Header</h1>
-                <p class="text-center text-lg-start">Flavor</p>
+                <h1 class="text-center text-lg-start">New Project</h1>
+                <p class="text-center text-lg-start">Select the options below to create a report.</p>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3">Col-3</div>
-            <div class="col-lg-9">Col-9</div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-lg-9 d-flex flex-column align-items-end">
-                <button class="btn btn-primary">Press</button>
+            <div class="row-md col-lg-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                in culpa qui officia deserunt mollit anim id est laborum.</div>
+            <div class="col-lg-9">
+                <div class="input-group mb-3 d-flex flex-column">
+                    <div class="dropdown">
+                        <label for="country-names">Select a country:</label>
+                        <select name="country-names" id="country-names">
+                            <option value="test">United States of America</option>
+                        </select>
+                    </div>
+                    <button class="m-2 btn btn-primary">Create Report</button>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- Bootstrap Script -->
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-    ></script>
-    <!-- DayJS Script -->
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script>dayjs().format()</script>
-    </script>
-    <!-- jQuery Script -->
-    <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"></script>
-    <!-- Custom Script -->
-    <script src="./assets/js/script2.js"></script>
+        <!-- Bootstrap Script -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+        <!-- DayJS Script -->
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+        <script>dayjs().format()</script>
+        </script>
+        <!-- jQuery Script -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <!-- Custom Script -->
+        <script src="./assets/js/script2.js"></script>
 </body>
+
 </html>
