added more js and html

--- a/project.html
+++ b/project.html
@@ -17,14 +17,14 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid" id="change-container">
+        <div class="row" id="target-market">
             <div class="col-lg-3">Col-3</div>
             <div class="col-lg-9">Col-9</div>
         </div>
-        <div class="row">
+        <div class="row" id="timeline">
             <div class="col-12 col-lg-9 d-flex flex-column align-items-end">
-                <button class="btn btn-primary">Press</button>
+                <button class="btn btn-primary"id="generate-btn">Press</button>
             </div>
         </div>
     </div>
