--- a/project.html
+++ b/project.html
@@ -28,6 +28,18 @@
             </div>
         </div>
     </div>
+    <label for="start">Start date:</label>
+
+    <!-- Date Selector -->
+<input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
+
+<label for="end">End date:</label>
+
+<input type="date" id="end" class="date"  value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
+
+<button id="myBtn">Submit</button>
+
+
     <!-- Bootstrap Script -->
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
