country name now shows with the holiday

--- a/home.html
+++ b/home.html
@@ -86,6 +86,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <!-- Custom Script -->
+    <script src="./assets/js/countryArray.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
