Working with calendar

--- a/project.html
+++ b/project.html
@@ -49,7 +49,9 @@
 <input type="date" id="end" class="date"  value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
 
 <button id="myBtn">Submit</button>
-<div class="container col-sm-4 col-md-7 col-lg-4 mt-5">
+
+    <!-- Calendar -->
+<div id ="showCalendar" class="container col-sm-4 col-md-7 col-lg-4 mt-5 ">
     <div class="card">
         <h3 class="card-header" id="monthAndYear"></h3>
         <table class="table table-bordered table-responsive-sm" id="calendar">
