--- a/project.html
+++ b/project.html
@@ -29,8 +29,8 @@
                 velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
                 in culpa qui officia deserunt mollit anim id est laborum.
             </div>
-            <div class="col-lg-9">
-                <div class="input-group mb-3 d-flex flex-column">
+            <div class="col-lg-9" id="change-container">
+                <div class="input-group mb-3 d-flex flex-column" id="input-group">
                     <div class="dropdown">
                         <label for="country-names">Select a country:</label>
                         <select name="country-names" id="country-names">
