--- a/home.html
+++ b/home.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/pmm0jjd.css">
     <!-- Bootstrap Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Homepage</title>
 </head>
 
@@ -16,27 +17,31 @@
     <!-- TODO: Replace divs with semantic HTML -->
     <!-- TODO: Insure proper IDs are being used -->
 
-    <div class="container-fluid">
+    <header class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-center text-lg-start">Welcome to holiDATE</h1>
                 <p class="text-center text-lg-start" id="current-date">MMMM D, YYYY</p>
             </div>
         </div>
-    </div>
+    </header>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 bordered-col">
                 <div class="p-2 d-flex align-items-center flex-column">
-                    <button class="mb-2 btn btn-primary" id="new-project">+New Project</button>
+                    <button class="mb-2 btn btn-primary w-100" id="new-project">+New Project</button>
                     <table>
                         <tbody id="holidayCard">
                         </tbody>
                     </table>
                 </div>
             </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 bordered-col">
                     <ul id="filesList" class="p-2 list-group scrollable-list d-flex flex-column">
+                        <li class="list-group-item">
+                            <h3>Placeholder Name</h3>
+                            <p><i>Last Updated: mm/dd/yy</i></p>
+                        </li>
                         <li class="list-group-item">
                             <h3>Placeholder Name</h3>
                             <p><i>Last Updated: mm/dd/yy</i></p>
