--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-lg-3 bordered-col">
                 <div class="p-2 d-flex align-items-center flex-column">
-                    <button class="mb-2 btn btn-primary w-100" id="new-project">+New Project</button>
+                    <button class="mb-2 btn btn-primary w-100 rounded-3" id="new-project">+New Project</button>
                     <table>
                         <tbody id="holidayCard">
                         </tbody>
