--- a/project.html
+++ b/project.html
@@ -25,7 +25,11 @@
         <div class="row">
             <div class="row-md col-lg-3 bordered-col py-2">
                 <h3>How It Works:</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="col-lg-9 bordered-col" id="change-container">
                 <div class="input-group mb-3 d-flex flex-column my-2">
@@ -36,99 +40,95 @@
                     </div>
                     <button class="m-2 btn btn-primary rounded-3" id="generate-btn">Create Report</button>
                 </div>
+                <!-- Calendar -->
+                <div id="showCalendar" class="container col-sm-4 col-md-7 col-lg-4 mt-5 ">
+                    <div class="card">
+                        <h3 class="card-header" id="monthAndYear"></h3>
+                        <table class="table table-bordered table-responsive-sm" id="calendar">
+                            <thead>
+                                <tr>
+                                    <th>Sun</th>
+                                    <th>Mon</th>
+                                    <th>Tue</th>
+                                    <th>Wed</th>
+                                    <th>Thu</th>
+                                    <th>Fri</th>
+                                    <th>Sat</th>
+                                </tr>
+                            </thead>
+
+                            <tbody id="calendar-body">
+
+                            </tbody>
+                        </table>
+
+                        <div class="form-inline">
+
+                            <button class="btn btn-outline-primary col-sm-6" id="previous"
+                                onclick="previous()">Previous</button>
+
+                            <button class="btn btn-outline-primary col-sm-6" id="next" onclick="next()">Next</button>
+                        </div>
+                        <br>
+                        <form class="form-inline">
+                            <label class="lead mr-2 ml-2" for="month">Jump To: </label>
+                            <select class="form-control col-sm-4" name="month" id="month" onchange="jump()">
+                                <option value=0>Jan</option>
+                                <option value=1>Feb</option>
+                                <option value=2>Mar</option>
+                                <option value=3>Apr</option>
+                                <option value=4>May</option>
+                                <option value=5>Jun</option>
+                                <option value=6>Jul</option>
+                                <option value=7>Aug</option>
+                                <option value=8>Sep</option>
+                                <option value=9>Oct</option>
+                                <option value=10>Nov</option>
+                                <option value=11>Dec</option>
+                            </select>
+
+
+                            <label for="year"></label><select class="form-control col-sm-4" name="year" id="year"
+                                onchange="jump()">
+                                <option value=2024>2024</option>
+                                <option value=2025>2025</option>
+                                <option value=2026>2026</option>
+                                <option value=2027>2027</option>
+                                <option value=2028>2028</option>
+                                <option value=2029>2029</option>
+                                <option value=2030>2030</option>
+                            </select>
+                        </form>
+                    </div>
+                </div>
+                <!-- Date Selector -->
+                <div id="date-selector">
+                    <label for="start">Start date:</label>
+                    <input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31"
+                        required>
+                    <label for="end">End date:</label>
+                    <input type="date" id="end" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31"
+                        required>
+                    <button id="myBtn">Submit</button>
+                </div>
             </div>
         </div>
     </div>
-    <label for="start">Start date:</label>
+ 
+   
+    <footer class="container-fluid">
 
-    <!-- Date Selector -->
-<input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
-
-<label for="end">End date:</label>
-
-<input type="date" id="end" class="date"  value="2024-01-01" min="2024-01-01" max="2030-12-31" required/>
-
-<button id="myBtn">Submit</button>
-
-    <!-- Calendar -->
-<div id ="showCalendar" class="container col-sm-4 col-md-7 col-lg-4 mt-5 ">
-    <div class="card">
-        <h3 class="card-header" id="monthAndYear"></h3>
-        <table class="table table-bordered table-responsive-sm" id="calendar">
-            <thead>
-            <tr>
-                <th>Sun</th>
-                <th>Mon</th>
-                <th>Tue</th>
-                <th>Wed</th>
-                <th>Thu</th>
-                <th>Fri</th>
-                <th>Sat</th>
-            </tr>
-            </thead>
-
-            <tbody id="calendar-body">
-
-            </tbody>
-        </table>
-
-        <div class="form-inline">
-
-            <button class="btn btn-outline-primary col-sm-6" id="previous" onclick="previous()">Previous</button>
-
-            <button class="btn btn-outline-primary col-sm-6" id="next" onclick="next()">Next</button>
-        </div>
-        <br/>
-        <form class="form-inline">
-            <label class="lead mr-2 ml-2" for="month">Jump To: </label>
-            <select class="form-control col-sm-4" name="month" id="month" onchange="jump()">
-                <option value=0>Jan</option>
-                <option value=1>Feb</option>
-                <option value=2>Mar</option>
-                <option value=3>Apr</option>
-                <option value=4>May</option>
-                <option value=5>Jun</option>
-                <option value=6>Jul</option>
-                <option value=7>Aug</option>
-                <option value=8>Sep</option>
-                <option value=9>Oct</option>
-                <option value=10>Nov</option>
-                <option value=11>Dec</option>
-            </select>
-
-
-            <label for="year"></label><select class="form-control col-sm-4" name="year" id="year" onchange="jump()">
-            <option value=2024>2024</option>
-            <option value=2025>2025</option>
-            <option value=2026>2026</option>
-            <option value=2027>2027</option>
-            <option value=2028>2028</option>
-            <option value=2029>2029</option>
-            <option value=2030>2030</option>
-        </select></form>
-    </div>
-</div>
-
-
-    </div>
-        <footer class="container-fluid">
-
-        </footer>
+    </footer>
     <!-- Bootstrap Script -->
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!-- DayJS Script -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script>dayjs().format()</script>
-    </script>
     <!-- jQuery Script -->
-    <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <!-- Custom Script -->
     <script src="./assets/js/script2.js"></script>
 </body>
