--- a/home.html
+++ b/home.html
@@ -29,26 +29,26 @@
         <div class="row">
             <div class="col-lg-3 bordered-col">
                 <div class="p-2 d-flex align-items-center flex-column">
-                    <div class="container-fluid">
+                    <div class="container">
                         <div class="row">
                             <button class="mb-2 btn btn-primary w-100 rounded-3" id="new-project">+New Project</button>
-                            <div class="carouselWrapper col-12">
-                                <div class="col-1">
+                            <div class="carouselWrapper">
+                                <div >
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#holidayCard"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                </div>
+                                <div id="holidayCard" class="carousel slide">
+                                    <div class="carousel-inner">
+                                    </div>
+                                </div>
+                                <div>
                                     <button class="carousel-control-next" type="button" data-bs-target="#holidayCard"
                                         data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
-                                    </button>
-                                </div>
-                                <div id="holidayCard" class="carousel slide col-10">
-                                    <div class="carousel-inner">
-                                    </div>
-                                </div>
-                                <div class="col-1">
-                                    <button class="carousel-control-prev" type="button" data-bs-target="#holidayCard"
-                                        data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Previous</span>
                                     </button>
                                 </div>
                             </div>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
         <div class="col-lg-9">
             <ul id="filesList" class="p-2 list-group scrollable-list d-flex flex-column">
                 <li class="list-group-item">
@@ -76,6 +76,7 @@
                     <p><i>Last Updated: mm/dd/yy</i></p>
                 </li>
             </ul>
+        </div>
         </div>
     </div>
     </div>
