--- a/project.html
+++ b/project.html
@@ -65,7 +65,7 @@
                         <div class="form-inline">
 
                             <button class="btn btn-outline-primary col-sm-6" id="previous"
-                                onclick="previous()">Previous</button>
+                                onclick="previous()">Previous</button><br>
 
                             <button class="btn btn-outline-primary col-sm-6" id="next" onclick="next()">Next</button>
                         </div>
