--- a/project.html
+++ b/project.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <!-- Date Selector -->
-                <div id="date-selector">
+                <div class="align-items-center" id="date-selector">
                     <label for="start">Start date:</label>
                     <input type="date" id="start" class="date" value="2024-01-01" min="2024-01-01" max="2030-12-31"
                         required>
