Trying to get calendar to work

--- a/project.html
+++ b/project.html
@@ -74,14 +74,14 @@
                         <div class="form-inline">
 
                             <button class="btn btn-outline-primary col-sm-6" id="previous"
-                                onclick="previous()">Previous</button><br>
+                                >Previous</button><br>
 
-                            <button class="btn btn-outline-primary col-sm-6" id="next" onclick="next()">Next</button>
+                            <button class="btn btn-outline-primary col-sm-6" id="next">Next</button>
                         </div>
                         <br>
                         <form class="form-inline">
                             <label class="lead mr-2 ml-2" for="month">Jump To: </label>
-                            <select class="form-control col-sm-4" name="month" id="month" onchange="jump()">
+                            <select class="form-control col-sm-4" name="month" id="month">
                                 <option value=0>Jan</option>
                                 <option value=1>Feb</option>
                                 <option value=2>Mar</option>
@@ -97,8 +97,7 @@
                             </select>
 
 
-                            <label for="year"></label><select class="form-control col-sm-4" name="year" id="year"
-                                onchange="jump()">
+                            <label for="year"></label><select class="form-control col-sm-4" name="year" id="year">
                                 <option value=2024>2024</option>
                                 <option value=2025>2025</option>
                                 <option value=2026>2026</option>
