clicking on holiday name now puts Wikipedia snippet in left column as a link to Wikipedia article

--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
     </header>
     <div class="container-fluid">
         <div class="row">
-            <div class="row-md col-lg-3 bordered-col py-2">
+            <div class="row-md col-lg-3 bordered-col py-2" id="left-column-text">
                 <h3>How It Works:</h3>
                 <p id="change-paragraph2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
