--- a/project.html
+++ b/project.html
@@ -81,7 +81,7 @@
                         <br>
                         <form class="form-inline p-2">
                             <label class="lead mr-2 ml-2" for="month">Jump To: </label>
-                            <select class="form-control col-sm-4" name="month" id="month">
+                            <select class="form-control col-sm-4" name="month" id="month" onchange="jump()">
                                 <option value=0>Jan</option>
                                 <option value=1>Feb</option>
                                 <option value=2>Mar</option>
@@ -97,7 +97,7 @@
                             </select>
 
 
-                            <label for="year"></label><select class="form-control col-sm-4" name="year" id="year">
+                            <label for="year"></label><select class="form-control col-sm-4" name="year" id="year" onchange="jump()">
                                 <option value=2024>2024</option>
                                 <option value=2025>2025</option>
                                 <option value=2026>2026</option>
