--- a/project.html
+++ b/project.html
@@ -30,6 +30,7 @@
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                     culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <button class="mx-2 my-4 py-2 btn btn-primary rounded-3" id="go-home">Home</button>
             </div>
             <div class="col-lg-9 bordered-col resultsHolder" id="change-container">
                 <div class="input-group d-flex flex-column">
