added home button

--- a/project.html
+++ b/project.html
@@ -28,6 +28,7 @@
                 <p id="change-paragraph2">Select your target country from the dropdown menu. Then click on the calendar 
                     icon in each date selector box to choose the start and end date. If there is a holiday for the selected country
                 within the date range it will show up.</p>
+                <button class="mx-2 my-4 py-2 btn btn-primary rounded-3" id="go-home">Home</button>
             </div>
             <div class="col-lg-9 bordered-col resultsHolder" id="change-container">
                 <div class="input-group d-flex flex-column">
@@ -119,7 +120,6 @@
                         </div>
                     </div>
                 </div>
-               
             </div>
         </div>
     </div>
