added flavor text

--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-12">
                 <h1 class="text-center text-lg-start">New Project</h1>
-                <!-- <p class="text-center text-lg-start" id="change-paragraph">Select the options below to create a report.</p> -->
+                <p class="text-center text-lg-start" id="change-paragraph">Follow the instructions below to find holidays in your date range.</p>
             </div>
         </div>
     </header>
