added flavor text and heading to homepage

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
             <div class="col-12">
                 <h1 class="text-center text-lg-start">Welcome to holiDATE</h1>
                 <p class="text-center text-lg-start" id="current-date">MMMM D, YYYY</p>
+                <p class="text-center text-lg-start">Looking for that new campaign idea to drive sales? Look no further.</p>
             </div>
         </div>
     </header>
@@ -49,6 +50,7 @@
                 </div>
             </div>
             <div class="col-lg-9">
+                <h3 id="saved-searches">Saved Searches</h3>
                 <ul id="filesList" class="p-2 list-group scrollable-list d-flex flex-column">
                    
                 </ul>
